--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.2
-      - name: Setup Kotlin
-        uses: fwilhe2/setup-kotlin@0.2.0
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4.2.1
       - name: Build with Gradle
         run: ./gradlew build
       - name: Upload APK
