--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.2
-      - name: Setup Java JDK
-        uses: actions/setup-java@v4.2.1
-        with: 
-          java-version: 1.8
+      - name: Setup Kotlin
+        uses: fwilhe2/setup-kotlin@0.2.0
       - name: Build with Gradle
-        run: ./gradlew build
+        run: gradlew build
       - name: Upload APK
         uses: actions/upload-artifact@v4.3.1
         with: 
