--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Kotlin
         uses: fwilhe2/setup-kotlin@0.2.0
       - name: Build with Gradle
-        run: .gradlew build
+        run: ./gradlew build
       - name: Upload APK
         uses: actions/upload-artifact@v4.3.1
         with: 
