--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v4.1.2
       - name: Setup Kotlin
         uses: fwilhe2/setup-kotlin@0.2.0
+      - name: Setup Java
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-versions: 17
       - name: Build with Gradle
         run: ./gradlew build
       - name: Upload APK
