--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4.2.1
         with:
-          java-versions: 17
+          java-version: 17
       - name: Build with Gradle
         run: ./gradlew build
       - name: Upload APK
