--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4.2.1
         with:
+          distribution: 'oracle'
           java-version: 17
       - name: Build with Gradle
         run: ./gradlew build
